opam-version: "1.2"
name:         "influxdb"
version:      "0.1"
maintainer:   "Vincent Bernardoff <vb@luminar.eu.org>"
authors:      "Vincent Bernardoff <vb@luminar.eu.org>"
bug-reports:  "https://github.com/vbmithr/ocaml-influxdb/issues"
homepage:     "https://github.com/vbmithr/ocaml-influxdb"
dev-repo:     "git+https://github.com/vbmithr/ocaml-influxdb.git"
license:      "ISC"

build:        ["jbuilder" "build" "-j" jobs "-p" name "@install"]

available: [
  ocaml-version >= "4.02.3"
]

depends: [
  "dune" {build & >= "1.0.1"}
  "fmt" {>= "0.8.5"}
  "lwt" {>= "3.3.0"}
  "ptime" {>= "0.8.3"}
  "ocplib-resto-directory"
]
